fixed the alignment issue for the mobile version, working on the horizontal scroll issue

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
   font-family: 'Oswald', sans-serif;
 }
 
-body {
+html, body {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -82,6 +82,7 @@ main {
 
 section {
   width: 50%;
+  border: 2px solid green;
 }
 
 .background-rectangle {
@@ -89,12 +90,13 @@ section {
   border-radius: 45px;
   position: absolute;
   top: -180px;
-  width: 100%;
-  height: 70%;
+  width: 900px;
+  height: 550px;
   z-index: -1;
 }
 
 .main-content-section {
+  width: auto;
   padding: 8%;
 }
 
@@ -169,6 +171,7 @@ h2 {
 }
 
 footer {
+  border: 2px solid blue;
   position: absolute;
   height: 50px;
   width: 100%;
@@ -208,8 +211,7 @@ footer {
 
   .background-rectangle {
     margin-left: 45%;
-    height: 580px;
-    overflow: hidden;
+    height: 600px;
   }
 
   .nav-switch {
@@ -258,11 +260,18 @@ footer {
   }
 
   section {
-    width: 100%;
+    width: auto;
+    min-width: 300px;
+  }
+
+  .main-content-section {
+    overflow-x: hidden;
   }
 
   .main-img-container {
     margin-top: 10%;
+    overflow-x: hidden;
+    border: 2px solid red;
   }
 
   .main-img {
@@ -298,5 +307,6 @@ footer {
     position: relative;
     font-size: 12px;
     padding: 0 5%;
+    width: auto;
   }
 }
